<resources>
    <string name="app_name">Coffee Manager</string>
    <string name="app_name_dev">Coffee Manager</string>
    <string name="action_settings">Settings</string>
    <string name="text_notify_sample">I am Notification Sample</string>
    <string name="text_notify_channel_sample">Channel Notification Sample</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_client_id">477137413206-86ll9sl733devagf5l8rs16qj7l5n7va.apps.googleusercontent.com</string>
    <string name="edt_user_hint">Tên tài khoản</string>
    <string name="edt_pass_hint">Mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="chk_remember_me">Nhớ mật khẩu?</string>
    <string name="menu_invoice">Hóa đơn</string>
    <string name="menu_account">Quản lý tài khoản</string>
    <string name="menu_product">Sản Phẩm</string>
    <string name="menu_statistical">Thống kê</string>
    <string name="menu_info">Cá nhân</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="update_info">Cập nhật thông tin</string>
    <string name="update_password">Đổi mật khẩu</string>
    <string name="version">Phiên bản 1.0.0</string>
    <string name="title_update_info">Cập nhật thông tin</string>
    <string name="title_update_password">Đổi mật khẩu</string>
    <string name="str_current_pass">Mật khẩu hiện tại</string>
    <string name="str_new_pass">Mật khẩu mới</string>
    <string name="str_re_pass">Nhập lại mật khẩu</string>
    <string name="btn_save">Lưu</string>
    <string name="str_name">Họ và tên</string>
    <string name="str_phone">Số điện thoại</string>
    <string name="str_new_location">Địa chỉ</string>
    <string name="str_new_birhday">Ngày sinh</string>
    <string name="search_bar_product_hint">Nhập vào tên sản phẩm</string>
    <string name="btn_update">Sửa</string>
    <string name="btn_remove">Xóa</string>
    <string name="title_update_product">Cập nhật thông tin sản phẩm</string>
    <string name="str_product_name">Tên sản phẩm</string>
    <string name="str_product_price">Giá bán</string>
    <string name="str_product_type">Loại sản phẩm</string>
    <string name="title_add_product">Thêm sản phẩm</string>
    <string name="menu_customer">Khách hàng</string>
    <string name="str_role_account">Tài khoản không đủ quyền sử dụng chức năng này!</string>
    <string name="str_add_username">Tên tài khoản</string>
    <string name="title_add_staff">Thêm nhân viên</string>
    <string name="rd_staff">Nhân viên</string>
    <string name="rd_manager">Quản lý</string>
    <string name="str_add_customer_name">Tên khách hàng</string>
    <string name="str_add_customer_tel">Số điện thoại</string>
    <string name="title_add_customer">Thêm khách hàng</string>
    <string name="str_state_cancel">Trạng thái: Hủy</string>
    <string name="str_state_active">Trạng thái: Đang chờ</string>
    <string name="str_state_finish">Trạng thái: Hoàn thành</string>
    <string name="btn_finish">Hoàn thành</string>
    <string name="btn_cancel">Hủy đơn</string>
    <string name="title_invoice_detail">Thông tin hóa đơn</string>
    <string name="str_name_of_product">Sản phẩm:</string>
    <string name="str_number_of_product">Số lượng:</string>
    <string name="str_detail">Chi tiết:</string>
    <string name="str_add_staff_name">Nhân viên tạo đơn</string>
    <string name="str_add_product_name">Tên sản phẩm</string>
    <string name="str_add_number_of_product">Số lượng</string>
    <string name="btn_add_product">Thêm sản phẩm</string>
    <string name="btn_add_invoice">Thanh toán</string>
    <string name="str_invoice_detail">Chi tiết hóa đơn:</string>
    <string name="title_add_invoice">Tạo hóa đơn</string>
    <string name="str_total">Thành tiền:</string>
    <string name="str_discount_percentage">Chiết khấu</string>
    <string name="str_add_discount_percentage">Chiết khấu: 0%</string>
    <string name="state_finish">Đã hoàn thành</string>
    <string name="state_active">Đang chờ</string>
    <string name="state_cancel">Đã hủy</string>
</resources>
