<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/ic_invoice"
            android:title="@string/menu_invoice" />

        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_user_v2"
            android:title="@string/menu_customer" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_employee"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_coffee"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_statistical"
            android:icon="@drawable/ic_pie_chart"
            android:title="@string/menu_statistical" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_user_v2"
            android:title="@string/menu_info" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
