<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vn.touchspace.example.ui.main.product.updateproduct.UpdateProductActivity">

    <include layout="@layout/toolbar"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_product"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/img_late"
            android:layout_width="@dimen/dp136"
            android:layout_height="@dimen/dp136"
            tools:ignore="ContentDescription" />

        <EditText
            android:background="@null"
            android:hint="@string/str_product_name"
            android:gravity="bottom"
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="@dimen/dp16"
            android:textSize="@dimen/sp16"
            tools:ignore="TextViewEdits" />

        <View
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1" />

        <EditText
            android:inputType="number"
            android:background="@null"
            android:hint="@string/str_product_price"
            android:gravity="bottom"
            android:id="@+id/edt_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="@dimen/dp16"
            android:textSize="@dimen/sp16"
            tools:ignore="TextViewEdits" />

        <View
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1" />

        <EditText
            android:background="@null"
            android:hint="@string/str_product_type"
            android:gravity="bottom"
            android:id="@+id/edt_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="@dimen/dp16"
            android:textSize="@dimen/sp16"
            tools:ignore="TextViewEdits" />

        <View
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1" />

        <Button
            android:layout_marginTop="@dimen/dp16"
            android:id="@+id/btn_save"
            style="@style/ButtonSmall"
            android:text="@string/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />
    </LinearLayout>

</LinearLayout>