<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context="vn.touchspace.example.ui.main.info.updateinfo.UpdatePasswordActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:hint="@string/str_current_pass"
            android:gravity="bottom"
            android:id="@+id/tv_current_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:textColor="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_lock_v2"
            android:drawablePadding="@dimen/dp16"
            android:textSize="@dimen/sp16"
            android:drawableStart="@drawable/ic_lock_v2"
            android:inputType="textPassword"
            tools:ignore="TextViewEdits" />

        <View
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1" />

        <TextView
            android:hint="@string/str_new_pass"
            android:gravity="bottom"
            android:id="@+id/tv_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:textColor="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_lock_v2"
            android:drawablePadding="@dimen/dp16"
            android:textSize="@dimen/sp16"
            android:drawableStart="@drawable/ic_lock_v2"
            android:inputType="textPassword"
            tools:ignore="TextViewEdits"/>

        <View
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"/>

        <TextView
            android:hint="@string/str_re_pass"
            android:gravity="bottom"
            android:id="@+id/tv_re_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:textColor="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_lock_v2"
            android:drawablePadding="@dimen/dp16"
            android:textSize="@dimen/sp16"
            android:drawableStart="@drawable/ic_lock_v2"
            android:inputType="textPassword"
            tools:ignore="TextViewEdits"/>

        <View
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"/>

        <Button
            android:layout_marginTop="@dimen/dp16"
            android:id="@+id/btn_save"
            style="@style/ButtonOrginal"
            android:text="@string/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />
    </LinearLayout>

</LinearLayout>